{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 133,
  "lineage": "9e683b8c-fc5e-5b10-2c81-6a352c8f79d4",
  "resources": [
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/azsea-nsg-rg/providers/Microsoft.Network/networkSecurityGroups/azsea-nsg",
            "location": "southeastasia",
            "name": "azsea-nsg",
            "resource_group_name": "azsea-nsg-rg",
            "security_rule": [],
            "tags": {
              "env": "training",
              "source": "citadel"
            }
          },
          "depends_on": [
            "azurerm_resource_group.nsgrg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowHTTP",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/azsea-nsg-rg/providers/Microsoft.Network/networkSecurityGroups/azsea-nsg/securityRules/AllowHTTP",
            "name": "AllowHTTP",
            "network_security_group_name": "azsea-nsg",
            "priority": 1020,
            "protocol": "Tcp",
            "resource_group_name": "azsea-nsg-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.nsgrg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowHTTPS",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/azsea-nsg-rg/providers/Microsoft.Network/networkSecurityGroups/azsea-nsg/securityRules/AllowHTTPS",
            "name": "AllowHTTPS",
            "network_security_group_name": "azsea-nsg",
            "priority": 1030,
            "protocol": "Tcp",
            "resource_group_name": "azsea-nsg-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.nsgrg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowRDP",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/azsea-nsg-rg/providers/Microsoft.Network/networkSecurityGroups/azsea-nsg/securityRules/AllowRDP",
            "name": "AllowRDP",
            "network_security_group_name": "azsea-nsg",
            "priority": 1050,
            "protocol": "Tcp",
            "resource_group_name": "azsea-nsg-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.nsgrg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowSQLServer",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/azsea-nsg-rg/providers/Microsoft.Network/networkSecurityGroups/azsea-nsg/securityRules/AllowSQLServer",
            "name": "AllowSQLServer",
            "network_security_group_name": "azsea-nsg",
            "priority": 1040,
            "protocol": "Tcp",
            "resource_group_name": "azsea-nsg-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.nsgrg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowSSH",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/azsea-nsg-rg/providers/Microsoft.Network/networkSecurityGroups/azsea-nsg/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "azsea-nsg",
            "priority": 1010,
            "protocol": "Tcp",
            "resource_group_name": "azsea-nsg-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.nsgrg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.1.0/24",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/core-rg/providers/Microsoft.Network/virtualNetworks/azsea-spoke-vnet/subnets/app",
            "name": "app",
            "resource_group_name": "core-rg",
            "virtual_network_name": "azsea-spoke-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.vnetrg",
            "azurerm_virtual_network.spoke-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "data-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.2.0/24",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/core-rg/providers/Microsoft.Network/virtualNetworks/azsea-spoke-vnet/subnets/data",
            "name": "data",
            "resource_group_name": "core-rg",
            "virtual_network_name": "azsea-spoke-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.vnetrg",
            "azurerm_virtual_network.spoke-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ext_dmz-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.2.0/24",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/core-rg/providers/Microsoft.Network/virtualNetworks/azsea-hub-vnet/subnets/ext_dmz",
            "name": "ext_dmz",
            "resource_group_name": "core-rg",
            "virtual_network_name": "azsea-hub-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.vnetrg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gw-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.0/24",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/core-rg/providers/Microsoft.Network/virtualNetworks/azsea-hub-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "core-rg",
            "virtual_network_name": "azsea-hub-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.vnetrg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "nva-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.3.0/24",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/core-rg/providers/Microsoft.Network/virtualNetworks/azsea-hub-vnet/subnets/nva",
            "name": "nva",
            "resource_group_name": "core-rg",
            "virtual_network_name": "azsea-hub-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.vnetrg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sharedsvc-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/core-rg/providers/Microsoft.Network/virtualNetworks/azsea-hub-vnet/subnets/sharedsvc",
            "name": "sharedsvc",
            "resource_group_name": "core-rg",
            "virtual_network_name": "azsea-hub-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.vnetrg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.0.0/24",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/core-rg/providers/Microsoft.Network/virtualNetworks/azsea-spoke-vnet/subnets/web",
            "name": "web",
            "resource_group_name": "core-rg",
            "virtual_network_name": "azsea-spoke-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.vnetrg",
            "azurerm_virtual_network.spoke-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_web",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/core-rg/providers/Microsoft.Network/virtualNetworks/azsea-spoke-vnet/subnets/web",
            "network_security_group_id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/azsea-nsg-rg/providers/Microsoft.Network/networkSecurityGroups/azsea-nsg",
            "subnet_id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/core-rg/providers/Microsoft.Network/virtualNetworks/azsea-spoke-vnet/subnets/web"
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub-vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/core-rg/providers/Microsoft.Network/virtualNetworks/azsea-hub-vnet",
            "location": "southeastasia",
            "name": "azsea-hub-vnet",
            "resource_group_name": "core-rg"
          },
          "depends_on": [
            "azurerm_resource_group.vnetrg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke-vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/core-rg/providers/Microsoft.Network/virtualNetworks/azsea-spoke-vnet",
            "location": "southeastasia",
            "name": "azsea-spoke-vnet",
            "resource_group_name": "core-rg"
          },
          "depends_on": [
            "azurerm_resource_group.vnetrg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hubspoke",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": false,
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/core-rg/providers/Microsoft.Network/virtualNetworks/azsea-hub-vnet/virtualNetworkPeerings/hubspoke",
            "name": "hubspoke",
            "remote_virtual_network_id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/core-rg/providers/Microsoft.Network/virtualNetworks/azsea-spoke-vnet",
            "resource_group_name": "core-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "azsea-hub-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.vnetrg",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spokehub",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": false,
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/core-rg/providers/Microsoft.Network/virtualNetworks/azsea-spoke-vnet/virtualNetworkPeerings/spokehub",
            "name": "spokehub",
            "remote_virtual_network_id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/core-rg/providers/Microsoft.Network/virtualNetworks/azsea-hub-vnet",
            "resource_group_name": "core-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "azsea-spoke-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.vnetrg",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke-vnet"
          ]
        }
      ]
    }
  ]
}